<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_20sdp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="sans-serif"
        android:hint="@string/strEmail"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/etPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="@dimen/_10sdp"
        android:fontFamily="sans-serif"
        android:hint="@string/strPassword"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/round_filled_rect"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="@color/colorPrimaryDark"
        android:fontFamily="sans-serif"
        android:paddingLeft="@dimen/_60sdp"
        android:paddingTop="@dimen/_9sdp"
        android:paddingRight="@dimen/_60sdp"
        android:paddingBottom="@dimen/_9sdp"
        android:text="@string/strLogIn"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:text="@string/strNotAnUser"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

</LinearLayout>