<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/ic_user_name"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/strUserName"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_gen"
                    android:drawablePadding="@dimen/_10sdp"
                    android:fontFamily="sans-serif"
                    android:gravity="center_vertical"
                    android:hint="@string/strGender"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/rgGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/rbMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:fontFamily="sans-serif"
                            android:text="@string/strMale" />

                        <RadioButton
                            android:id="@+id/rbFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:text="@string/strFemale" />
                    </RadioGroup>
                </LinearLayout>

            </LinearLayout>


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/strEmail"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@id/etPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/strPassword"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:nextFocusDown="@id/etConfirmPassword"
                android:singleLine="true" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/strConfirmPassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

            <TextView
                android:id="@+id/txtPasswordMismatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/strPasswordMismatch"
                android:textColor="@color/colorRed"
                android:textSize="@dimen/_12sdp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/round_filled_rect"
                android:backgroundTint="@color/colorPrimary"
                android:backgroundTintMode="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:paddingLeft="@dimen/_60sdp"
                android:paddingTop="@dimen/_9sdp"
                android:paddingRight="@dimen/_60sdp"
                android:paddingBottom="@dimen/_9sdp"
                android:text="@string/strSignUp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>